caption added below image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div
-      class="container bg-body-background mx-auto max-w-full min-h-full text-black"
+      class="container bg-body-background mx-auto max-w-full min-h-fit text-black"
     >
       <nav class="navigation bg-transparent flex">
         <img
@@ -35,14 +35,25 @@
       <div></div>
 
       <div class="relative flex justify-center items-center h-screen w-screen">
-        <div
-          class="big-cirlce bg-white rounded-tl-full rounded-tr-full "
-        >
+        <div class="big-cirlce bg-white rounded-tl-full rounded-tr-full">
           <img
-            class="img-text w-8/12  m-auto"
+            class="img-text w-8/12 m-auto"
             src="https://chungiyoo.com/img/contact-title.svg"
             alt="open-to-work-image"
           />
+
+          <img
+            class="girl-img w-5/12 m-auto"
+            src="https://images.ctfassets.net/8b1jz4cf6kyy/DFViCTj7kZvz7vKa9MXPi/05563fe4ae894a10925311a6e6bc2a81/Swimming.svg?w=640&fl=progressive&q=92"
+            alt="image"
+          />
+
+          <div class="message">
+            <p>
+              With passionate creatives <br />
+              striving to create uniqueness.
+            </p>
+          </div>
         </div>
       </div>
     </div>
